# esp-iot-bridge

./: .codespellrc  .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Introduction.md  README.md  README_CN.md  README_EN.md  requirements.txt  sdkconfig.defaults  sdkconfig.defaults.esp32c3  sdkconfig.defaults.esp32s2  sdkconfig.defaults.esp32s3
.github/: PULL_REQUEST_TEMPLATE.md
components/esp-litemesh/: CMakeLists.txt  Kconfig.projbuild  README.md  VERSION
components/esp-litemesh/include/: esp_litemesh.h  esp_litemesh_core.h
components/esp-litemesh/src/: esp_litemesh.c
components/esp_mesh_lite/: CMakeLists.txt  Kconfig.projbuild  README.md  VERSION
components/esp_mesh_lite/include/: esp_mesh_lite.h  esp_mesh_lite_core.h
components/esp_mesh_lite/src/: esp_mesh_lite.c
components/esp_modem/: CMakeLists.txt
components/esp_modem/esp_modem/examples/ap_to_pppos/main/: modem_board.c
components/esp_modem/esp_modem/src/: esp_modem_dte.c  esp_modem_netif.c
components/esp_modem/examples/ap_to_pppos/main/: ap2pppos_example_main.c  modem_board.c
components/esp_modem/examples/modem_console/main/: httpget_handle.c  modem_console_main.c  ping_handle.c
components/esp_modem/examples/pppos_client/main/: pppos_client_main.c
components/esp_modem/include/: esp_modem.h  esp_modem_dce.h  esp_modem_dte.h  esp_modem_netif.h  esp_modem_recov_helper.h
components/esp_modem/include_compat/: esp_modem_compat.h
components/esp_modem/src/: esp_modem.c  esp_modem_compat.c  esp_modem_dce.c  esp_modem_dce_command_lib.c  esp_modem_dce_common_commands.c  esp_modem_dte.c  esp_modem_dte_uart.c  esp_modem_dte_usb.c  esp_modem_netif.c  esp_modem_recov_helper.c  esp_sim7600.c  esp_sim800.c
components/esp_usbh_cdc/: CMakeLists.txt  Kconfig  README.md  README_cn.md  esp_usbh_cdc.c
components/esp_usbh_cdc/include/: esp_usbh_cdc.h
components/esp_usbh_cdc/test/: CMakeLists.txt  test_usbh_cdc.c
components/gateway/: CMakeLists.txt  Kconfig.projbuild  VERSION
components/gateway/include/: esp_gateway.h  esp_gateway_ble.h  esp_gateway_config.h  esp_gateway_eth.h  esp_gateway_modem.h  esp_gateway_netif_virtual.h  esp_gateway_vendor_ie.h  esp_gateway_wifi.h  light_driver.h
components/gateway/priv_inc/: esp_gateway_config.h  esp_gateway_internal.h  esp_gateway_litemesh.h  esp_gateway_modem.h  esp_gateway_vendor_ie.h  esp_gateway_wifi.h
components/gateway/src/: board.c  gateway_ble.c  gateway_ble_qcloud.c  gateway_common.c  gateway_eth.c  gateway_litemesh.c  gateway_modem.c  gateway_netif_virtual.c  gateway_vendor_ie.c  gateway_wifi.c  led_pwm.c  light_driver.c  modem_board.c  modem_board_sim7600.c  modem_board_usb.c
components/iot_bridge/: CHANGELOG.md  CMakeLists.txt  Kconfig  Kconfig.projbuild  README.md  README_CN.md  User_Guide.md  User_Guide_CN.md  VERSION  idf_component.yml
components/iot_bridge/cmake/: README.md  example_usage.cmake  patch_utils.cmake
components/iot_bridge/doc/: SPI_setup.md
components/iot_bridge/docs/: Linux_based_readme.md  SDIO_setup.md  SPI_setup.md
components/iot_bridge/docs/_static/: generate_bridge_diagram.py  generate_gpio_map_diagram.py
components/iot_bridge/driver/: CMakeLists.txt  Kconfig
components/iot_bridge/driver/include/: interface.h  network_adapter.h  sdio_slave_api.h  slave_bt.h
components/iot_bridge/driver/src/: network_adapter.c  sdio_slave_api.c  slave_bt.c  spi_slave_api.c
components/iot_bridge/drivers/: CMakeLists.txt  Kconfig  VERSION
components/iot_bridge/drivers/include/: interface.h  mempool.h  mempool_ll.h  network_adapter.h  sdio_slave_api.h  slave_bt.h  wifi_dongle_adapter.h
components/iot_bridge/drivers/src/: mempool.c  mempool_ll.c  network_adapter.c  sdio_slave_api.c  slave_bt.c  spi_slave_api.c
components/iot_bridge/include/: customer_hook.h  esp_bridge.h  esp_bridge_config.h  esp_bridge_events.h  esp_bridge_internal.h  esp_bridge_lwip_hook.h  esp_bridge_wifi.h
components/iot_bridge/include/priv_inc/: esp_bridge_wifi.h
components/iot_bridge/patch/: README.md  dhcp.patch  dhcpserver.patch  ip4_forward.patch  ip4_napt.patch  lwip_napt.patch
components/iot_bridge/patches/: dhcp.patch  dhcpserver.patch  ip4_napt.patch  patches.list
components/iot_bridge/priv_inc/: esp_bridge_config.h  esp_bridge_internal.h  esp_bridge_modem.h
components/iot_bridge/src/: bridge_common.c  bridge_eth.c  bridge_lwip_hook.c  bridge_modem.c  bridge_sdio.c  bridge_spi.c  bridge_usb.c  bridge_wifi.c  esp_eth_netif_glue_wrap.c  modem_board_sim7600.c  modem_board_usb.c
components/network_adapter/: CMakeLists.txt  Kconfig.projbuild
components/network_adapter/include/: network_adapter.h  slave_bt.h
components/network_adapter/src/: network_adapter.c  sdio_slave_api.c  slave_bt.c  spi_slave_api.c
components/usb/usb_device/: CMakeLists.txt  Kconfig  README.md  idf_component.yml
components/usb/usb_device/additions/include/: tinyusb.h  tinyusb_types.h  tusb_bth.h  tusb_cdc_acm.h  tusb_config.h  tusb_hid.h  tusb_msc.h  tusb_net.h  tusb_tasks.h  vfs_tinyusb.h
components/usb/usb_device/additions/include_private/: cdc.h  descriptors_control.h  usb_descriptors.h
components/usb/usb_device/additions/src/: cdc.c  descriptors_control.c  tinyusb.c  tusb_bth.c  tusb_cdc_acm.c  tusb_console.c  tusb_dfu.c  tusb_hid.c  tusb_msc.c  tusb_net.c  tusb_tasks.c  tusb_webusb.c  usb_descriptors.c  usbd_4.c  usbd_5.c  vfs_tinyusb.c
components/usb/usb_device/additions/tusb/src/class/bth/: bth_device.c  bth_device.h
components/usb/usb_device/additions/tusb/src/class/dfu/: dfu.h  dfu_device.c  dfu_device.h  dfu_rt_device.c  dfu_rt_device.h
components/web_server/: CMakeLists.txt
components/web_server/fs_image/: index.html
components/web_server/include/: web_server.h
components/web_server/src/: web_server.c
components/wifi_prov_mgr/: CMakeLists.txt  Kconfig  Kconfig.projbuild  idf_component.yml  manager.c
components/wifi_prov_mgr/include/: wifi_prov_mgr.h
components/wifi_prov_mgr/src/: wifi_prov_mgr.c
components/wifi_prov_mgr/v4.4/: manager.c
components/wifi_prov_mgr/v5.0/: manager.c
(+193 files in other folders)
